<resources>
    <string name="app_name">World Cup 2018 Russia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="home_nav">Home</string>
    <string name="settings_nav">Settings</string>
    <string name="today_s_match_title">Today\'s Match</string>
    <string name="fri_15_05_2018_10_00_pm_test">Fri 15.05.2018 10:00 PM</string>
    <string name="vs_test">VS</string>
    <string name="russia_test">Russia</string>
    <string name="saudi_test">Saudi</string>
    <string name="goals">Goals</string>
    <string name="team_name">Team Name</string>
    <string name="players">Players</string>
    <string name="teams">Teams</string>
    <string name="_1">1.</string>
    <string name="russia">Russia</string>
    <string name="_00">00</string>
    <string name="round_1">Round 1</string>
    <string name="_1_0">1 : 0</string>

    <string name="details">Shots\n\nShots on target\n\nPossession\n\nPasses\n\nPass accuracy\n\nFouls\n\nYellow cards\n\nRed cards\n\nOffsides\n\nCorners</string>

    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_on">Notifications On</string>
    <string name="sound_on">Sound On</string>
    <string name="vibration_on">Vibration On</string>
    <string name="time_zone">Time Zones</string>
    <string name="international_time_zone">International Time Zone</string>
    <string name="bangladeshi_time_zone">Bangladeshi Time Zone</string>
    <string name="group_a">Group A</string>
    <string name="pts">Pts.</string>
    <string name="gd">Gd.</string>
    <string name="p">P.</string>
    <string name="egypt">Egypt</string>
    <string name="uruguay">Uruguay</string>
    <string name="rate_apps">Rate App</string>
    <string name="more">More</string>

    <string name="about_app">The content of this app is retrieving data from the server and added to the local database. So you can browse the application even there are no internet connections. To sync the latest update of the app data you need your internet connections on. This app will notify you twice a day for the matches of the current day.  If anything seems wrong with this app please let me know. I would be very thankful for that. \nIf you like the app, do not forget to rate it, and give your valuable review.</string>

    <string name="user_guide">The first time you need to open your internet connection to sync data. Then you can see all the data in offline mode. You can also control the notification, notification sound and vibration as well from the settings. The user can choose the time zone from time zones in the settings where two time zones are available. In order to get updated data, you need to keep your data connection on. Users can select their favorite teams from the Team Selection in Settings and the match schedule of these teams will appear in your teams fragment.</string>

    <string name="developer">Md. Saiful Haque Hridoy\nNoakhali Science and Technology University
        \n<b>Email</b>\n<a href="mailto:md.saifulhq@gmail.com">md.saifulhq@gmail.com\n</a></string>

    <!-- ad-mob id's -->
    <string name="admob_app_id">ca-app-pub-1019292850972147~7543503203</string>
    <string name="footer_ad_unit">ca-app-pub-1019292850972147/4725768171</string>
    <string name="interestitial_fullscreen_ad">ca-app-pub-1019292850972147/1554069109</string>

    <string name="team_select_notice">No teams is selected!!\n\nYou need to go to the Settings and select your teams to appear here.</string>

</resources>
