<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_300">

    <RelativeLayout
        android:id="@+id/RL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="5"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teams" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="5"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/players" />

            </LinearLayout>

        </RadioGroup>

        <RelativeLayout
            android:layout_below="@id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/team_name"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/md_grey_700"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:gravity="start" />

            <TextView
                android:id="@+id/tv_goals_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/goals"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/md_grey_700"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="end"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"/>

        </RelativeLayout>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_below="@id/RL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/TVNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Data doesn't synced yet!!"
        android:layout_centerInParent="true"
        android:gravity="center"/>

    <TextView
        android:id="@+id/TVTip"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Turn internet connection on!!"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/md_grey_700"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>