<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_200"
    android:id="@+id/scrollViewMatchDetails">

    <RelativeLayout
        android:id="@+id/RelativeLayoutMatchDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/CardView1MatchDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RLListItem"
                android:background="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:id="@+id/RL2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_date_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:text="@string/fri_15_05_2018_10_00_pm_test"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/md_grey_900"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:gravity="start"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/tv_round"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:text="@string/round_1"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/md_grey_900"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:gravity="end" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ImageTeam1MatchDetails"
                        android:layout_width="95dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ru"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/TextViewScoreMatchDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/_1_0"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_alignTop="@id/ImageTeam1MatchDetails"
                        android:layout_alignBottom="@id/ImageTeam1MatchDetails"
                        android:gravity="center"
                        android:layout_centerInParent="true"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ImageTeam2MatchDetails"
                        android:layout_width="95dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/sa"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:id="@+id/TextViewTeam1MatchDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="95dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/russia_test"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000"
                        android:textStyle="normal"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:layout_below="@id/ImageTeam1MatchDetails"
                        android:gravity="center"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true" />

                    <TextView
                        android:id="@+id/TextViewTeam2MatchDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="95dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/saudi_test"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000"
                        android:textStyle="normal"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:layout_below="@id/ImageTeam2MatchDetails"
                        android:gravity="center"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/CardView2MatchDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CardView1MatchDetails"
            app:cardCornerRadius="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:id="@+id/TextViewMatchDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/details"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textStyle="normal"
                android:gravity="center"/>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>