<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/md_grey_300">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TVAboutAppTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape1"
                    android:text="About App"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/TVAboutAppDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000"
                    android:text="@string/about_app"
                    android:layout_below="@id/TVAboutAppTitle"/>

                <TextView
                    android:id="@+id/TVUserGuideTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TVAboutAppDetails"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape1"
                    android:text="User Guide"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/TVUserGuideDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000"
                    android:text="@string/user_guide"
                    android:layout_below="@id/TVUserGuideTitle"/>

                <TextView
                    android:id="@+id/TVDeveloperTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TVUserGuideDetails"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape1"
                    android:text="Developer"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/TVDeveloperDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:text="@string/developer"
                    android:layout_below="@id/TVDeveloperTitle"/>

            </RelativeLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>